BaseX DOM-API extended to simplify/speedup conversions between DOM and BaseX database instances (ReadOnly).